--- a/src/app/personnels/manager-catalog/catalog-academic-rank/catalog-academic-rank.component.html
+++ b/src/app/personnels/manager-catalog/catalog-academic-rank/catalog-academic-rank.component.html
@@ -1,28 +1,31 @@
 <h4 class="text-center"> Danh mục học hàm </h4>
+<div *ngIf="message.condition"
+     [ngClass]="'alert alert-'+ message.type">
+  {{message.content}}
+</div>
 <div class="table-responsive">
   <table class="table table-bordered">
     <thead>
     <tr>
       <th style="width:5%">STT</th>
-      <th style="width:70%" class="name">Tên học hàm </th>
+      <th style="width:70%" class="name">Tên học hàm</th>
       <th style="width:10%">
-        <span class="action-icon" (click)="openModal(modal)"><i class="fa fa-plus"></i></span>
+        <span class="action-icon" (click)="openModals()"><i class="fa fa-plus"></i></span>
       </th>
     </tr>
     </thead>
     <tbody>
     <tr *ngFor="let item of list.toArray();let i = index ">
       <td>{{i+1}}</td>
-      <td class="name">{{item}}</td>
+      <td class="name">{{item.name}}</td>
       <td style="width:10%">
-        <span class="action-icon" (click)="openModal(modal)"><i class="fa fa-edit"></i></span>
-        <span class="action-icon" (click)="openModal(modal)"><i class="fa fa-remove"></i></span>
+        <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
+        <span class="action-icon" (click)="removeItem(item)"><i class="fa fa-remove"></i></span>
       </td>
     </tr>
     </tbody>
   </table>
 </div>
-
 
 
 <modal #modal size='lg' backdrop="true">
@@ -39,7 +42,7 @@
         <div class="col-xs-12">
           <div class="item-control">
             <label>Tên học hàm </label>
-            <input name="inputData" class="form-control" [(ngModel)]="inputData" style="width: 100%!important;"/>
+            <input name="inputData"  class="form-control" [(ngModel)]="inputData" style="width: 100%!important;"/>
           </div>
         </div>
       </div>
@@ -47,7 +50,9 @@
   </modal-body>
 
   <modal-footer>
-    <button class="btn-action" (click)="onSave()">{{positionUpdate == -1?'Thêm':'Cập nhật'}}</button>
+    <button class="btn-action" [disabled]="inputData.trim() === ''"
+            (click)="onSave()">{{update == null?'Thêm':'Cập nhật'}}
+    </button>
   </modal-footer>
 
 </modal>
